JumpScript/tests/baselines/reference/parameterNamesInTypeParameterList.errors.txt
tests/cases/compiler/parameterNamesInTypeParameterList.jump(1,30): error TS2552: Cannot find name 'a'. Did you mean 'A'?
tests/cases/compiler/parameterNamesInTypeParameterList.jump(5,30): error TS2552: Cannot find name 'a'. Did you mean 'A'?
tests/cases/compiler/parameterNamesInTypeParameterList.jump(9,30): error TS2552: Cannot find name 'a'. Did you mean 'A'?
tests/cases/compiler/parameterNamesInTypeParameterList.jump(14,22): error TS2552: Cannot find name 'a'. Did you mean 'A'?
tests/cases/compiler/parameterNamesInTypeParameterList.jump(17,22): error TS2552: Cannot find name 'a'. Did you mean 'A'?
tests/cases/compiler/parameterNamesInTypeParameterList.jump(20,22): error TS2552: Cannot find name 'a'. Did you mean 'A'?


==== tests/cases/compiler/parameterNamesInTypeParameterList.jump (6 errors) ====
    function f0<T extends typeof a>(a: T) {
                                 ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'A'?
    	a.b;
    }
    
    function f1<T extends typeof a>({a}: {a:T}) {
                                 ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'A'?
    	a.b;
    }
    
    function f2<T extends typeof a>([a]: T[]) {
                                 ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'A'?
    	a.b;
    }
    
    class A {
    	m0<T extends typeof a>(a: T) {
    	                    ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'A'?
    		a.b
    	}
    	m1<T extends typeof a>({a}: {a:T}) {
    	                    ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'A'?
    		a.b
    	}
    	m2<T extends typeof a>([a]: T[]) {
    	                    ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'A'?
    		a.b
    	}
    }